--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -5,10 +5,10 @@
     <title>关于我们</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/lessstyle.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/lessstyle.css">
 </head>
 <body>
 <header class="aui-bar aui-bar-nav" id="aui-header">
@@ -21,25 +21,25 @@
     <ul>
         <li>
             <div>
-                <img src="__MARKET_IMG__/sm.png" alt="">
+                <img src="../images/sm.png" alt="">
             </div>
 
         </li>
         <li>
             <div>
-                <img src="__MARKET_IMG__/yj.png" alt="">
+                <img src="../images/yj.png" alt="">
             </div>
 
         </li>
         <li>
             <div>
-                <img src="__MARKET_IMG__/jzg.png" alt="">
+                <img src="../images/jzg.png" alt="">
             </div>
         </li>
     </ul>
 
 </section>
-<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
-<script src="__MARKET_JS__/common.js"></script>
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/common.js"></script>
 </body>
 </html>
