--- a/html/extension.html
+++ b/html/extension.html
@@ -5,11 +5,11 @@
     <title>推广中心</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/extension.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/aui-slide.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/extension.css">
+    <link rel="stylesheet" href="../css/aui-slide.css">
 </head>
 <body>
 <!--头-->
@@ -23,13 +23,13 @@
     <div id="aui-slide3">
         <div class="aui-slide-wrap" >
             <div class="aui-slide-node bg-dark">
-                <img src="__MARKET_IMG__/banner1.1.png" />
+                <img src="../images/banner1.1.png" />
             </div>
             <div class="aui-slide-node bg-dark">
-                <img src="__MARKET_IMG__/banner2.2.png" />
+                <img src="../images/banner2.2.png" />
             </div>
             <div class="aui-slide-node bg-dark">
-                <img src="__MARKET_IMG__/banner3.3.png" />
+                <img src="../images/banner3.3.png" />
             </div>
         </div>
         <div class="aui-slide-page-wrap"><!--分页容器--></div>
@@ -41,7 +41,7 @@
             <li class="my-share-li">
                 <a href="wxmass.html">
                     <div class="my-share-li-img">
-                    <img src="__MARKET_IMG__/weixin.png" alt="">
+                    <img src="../images/weixin.png" alt="">
                     </div>
                 </a>
 
@@ -51,7 +51,7 @@
             <li class="my-share-li">
                 <a href="friends.html">
                     <div class="my-share-li-img">
-                        <img src="__MARKET_IMG__/pengyouquan.png" alt="">
+                        <img src="../images/pengyouquan.png" alt="">
                     </div>
                 </a>
 
@@ -61,7 +61,7 @@
             <li class="my-share-li">
                 <a href="selected.html">
                     <div class="my-share-li-img">
-                        <img src="__MARKET_IMG__/jingxuan.png" alt="">
+                        <img src="../images/jingxuan.png" alt="">
                     </div>
                 </a>
 
@@ -72,7 +72,7 @@
     </section>
     <!--平台公告-->
     <section class="my-notice">
-        <p class="my-notice-text1"><b><img src="__MARKET_IMG__/notice.png" alt="">平台公告</b></p>
+        <p class="my-notice-text1"><b><img src="../images/notice.png" alt="">平台公告</b></p>
         <ul>
             <li class="my-notice-li aui-clearfix">
                 <a href="notice.html"><div>【品牌入驻】纽特斯邦威入驻平台了 <i style="float: right">>></i></div></a>
@@ -117,9 +117,9 @@
     </a>
 </footer>
 
-<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
-<script src="__MARKET_JS__/api.2.0.js"></script>
-<script src="__MARKET_JS__/aui-slide.js"></script>
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/api.2.0.js"></script>
+<script src="../js/aui-slide.js"></script>
 <script>
     $(document).ready(function () {
         //轮播图
