--- a/html/inviteCode.html
+++ b/html/inviteCode.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>填写邀请码</title>
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/inviteCode.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/inviteCode.css">
 </head>
 <body>
 <header class="aui-bar aui-bar-nav">
@@ -23,8 +23,8 @@
     </div>
     <div class="invite-submit">确认</div>
 </section>
-<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
-<script src="__MARKET_JS__/config.js"></script>
-<script src="__MARKET_JS__/inviteCode.js"></script>
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/inviteCode.js"></script>
 </body>
 </html>
