--- a/html/login.html
+++ b/html/login.html
@@ -5,15 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>登录</title>
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/login.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
     <div class="login-product-name">东东推</div>
     <div class="login-touch-in">登录</div>
-    <script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
-    <script src="__MARKET_JS__/config.js"></script>
-    <script src="__MARKET_JS__/login.js"></script>
+    <script src="../js/jquery-3.0.0.min.js"></script>
+    <script src="../js/config.js"></script>
+    <script src="../js/login.js"></script>
 
 </body>
 </html>
