--- a/html/myShop.html
+++ b/html/myShop.html
@@ -5,18 +5,18 @@
     <title>我的店铺</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/myshop.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/common1.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/myshop.css">
 </head>
 <body>
 <section>
     <header id="header-box">
         <script type="text/x-handlebars-template" id="mine-info-template">
             {{#user}}
-            <img class="user-photo" src="__MARKET_IMG__/user.jpg" alt="">
+            <img class="user-photo" src="../images/user.jpg" alt="">
             <div class="member-info">
                 <div>{{userNickName}}</div>
                 <div>已经售66666件商品</div>
@@ -67,7 +67,7 @@
                 <a href="javascript:;" class="display-box">
                     <div class="dis-list-box">
                         <div class="dis-shop-img">
-                            <img src="__MARKET_IMG__/22.jpg" alt="">
+                            <img src="../images/22.jpg" alt="">
                             <div class="earn">
                                 <span>共赚<span>{{profit}}</span>元</span>
                             </div>
@@ -107,24 +107,24 @@
         <ul>
             <li class="my-share-li">
                 <div class="my-share-li-img">
-                    <img src="__MARKET_IMG__/pyq.png" alt="">
+                    <img src="../images/pyq.png" alt="">
                 </div>
                 <p>朋友</p>
             </li>
             <li class="my-share-li">
                 <div class="my-share-li-img">
-                    <img src="__MARKET_IMG__/lj.png" alt="">
+                    <img src="../images/lj.png" alt="">
                 </div>
                 <p>复制链接</p>
             </li>
             <li class="my-share-li">
                 <div class="my-share-li-img">
-                    <img src="__MARKET_IMG__/ewm.png" alt="">
+                    <img src="../images/ewm.png" alt="">
                 </div>
                 <p>二维码</p>
             </li>
         </ul>
-        <div class="my-share-del1"><img src="__MARKET_IMG__/del1.png" alt=""></div>
+        <div class="my-share-del1"><img src="../images/del1.png" alt=""></div>
     </section>
     <!--删除商品层-->
     <section class="myshop-del">
@@ -133,7 +133,7 @@
             <div class="item-text"><span>是否删除该商品</span></div>
             <!--删除商品详情-->
             <div class="item-detail">
-                <div class="item-detail-left"><img src="__MARKET_IMG__/22.jpg" alt=""></div>
+                <div class="item-detail-left"><img src="../images/22.jpg" alt=""></div>
                 <div class="item-detail-right"><p><span>红包20:00元</span>我爱北京天安我爱北京天安门我爱北京天安门我爱北京天安门我爱北京天安门门我爱北京天安门我爱北京天安门我爱北京天安门</p></div>
             </div>
             <!--取消删除选项-->
@@ -155,12 +155,12 @@
             </div>
             <!--图片-->
             <div class="myshop-share-item-img">
-                <img src="__MARKET_IMG__/banner1.png" alt="">
+                <img src="../images/banner1.png" alt="">
             </div>
             <!--二维码-->
             <div class="myshop-share-item-code">
                 <div class="myshop-item-code">
-                    <img src="__MARKET_IMG__/22.jpg" alt="">
+                    <img src="../images/22.jpg" alt="">
                 </div>
                 <div class="myshop-item-code-text">
                     <span>扫描或微信长按识别二维码</span>
@@ -169,18 +169,18 @@
             </div>
             <!--保存到相册-->
             <div class="myshop-share-item-deposit">
-                <img src="__MARKET_IMG__/deposit.png" alt="">
+                <img src="../images/deposit.png" alt="">
             </div>
         </section>
     </section>
 </section>
 
-<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
-<script src="__MARKET_JS__/api.2.0.js"></script>
-<script src="__MARKET_JS__/config.js"></script>
-<script src="__MARKET_JS__/handlebars-v4.0.10.js"></script>
-<script src="__MARKET_JS__/common.js"></script>
-<script src="__MARKET_JS__/myShop.js"></script>
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/api.2.0.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/common.js"></script>
+<script src="../js/myShop.js"></script>
 
 
 <script>
