--- a/html/set.html
+++ b/html/set.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>设置</title>
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/set.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/set.css">
 </head>
 <body>
 <header class="aui-bar aui-bar-nav">
@@ -40,7 +40,7 @@
     <div class="out-login">退出登录</div>
 </nav>
 
-<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
-<script src="__MARKET_JS__/common.js"></script>
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/common.js"></script>
 </body>
 </html>
