--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,12 @@
     <title>首页</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/index.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/aui-slide.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/common1.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/aui-slide.css">
 </head>
 <body>
 <!--搜索框-->
@@ -30,13 +30,13 @@
     <div id="aui-slide3">
         <div class="aui-slide-wrap" >
             <div class="aui-slide-node bg-dark">
-                <img src="__MARKET_IMG__/banner1.1.png" />
+                <img src="../images/banner1.1.png" />
             </div>
             <div class="aui-slide-node bg-dark">
-                <img src="__MARKET_IMG__/banner2.2.png" />
+                <img src="../images/banner2.2.png" />
             </div>
             <div class="aui-slide-node bg-dark">
-                <img src="__MARKET_IMG__/banner3.3.png" />
+                <img src="../images/banner3.3.png" />
             </div>
         </div>
         <div class="aui-slide-page-wrap"><!--分页容器--></div>
@@ -84,7 +84,7 @@
         <!--<div class="home-three">
             <a href="javascript:;" class="display-box">
                 <div class="home-three-box">
-                    <img src="__MARKET_IMG__/11.jpg" alt="">
+                    <img src="../images/11.jpg" alt="">
                     <div class="home-three-price">
                         <span>￥188</span>
                         <span>￥998</span>
@@ -93,7 +93,7 @@
             </a>
             <a href="javascript:;" class="display-box">
                 <div class="home-three-box">
-                    <img src="__MARKET_IMG__/11.jpg" alt="">
+                    <img src="../images/11.jpg" alt="">
                     <div class="home-three-price">
                         <span>￥188</span>
                         <span>￥998</span>
@@ -102,7 +102,7 @@
             </a>
             <a href="javascript:;" class="display-box">
                 <div class="home-three-box">
-                    <img src="__MARKET_IMG__/11.jpg" alt="">
+                    <img src="../images/11.jpg" alt="">
                     <div class="home-three-price">
                         <span >￥188</span>
                         <span>￥998</span>
@@ -112,7 +112,7 @@
         </div>-->
 
         <div class="home-shop-box">
-            <img src="__MARKET_IMG__/banner1.png" alt="">
+            <img src="../images/banner1.png" alt="">
             <div class="home-shop-text">
                 <span>红包20.00元</span>
                 <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
@@ -134,7 +134,7 @@
         </div>
 
         <div class="home-shop-box">
-            <img src="__MARKET_IMG__/banner1.png" alt="">
+            <img src="../images/banner1.png" alt="">
             <div class="home-shop-text">
                 <span>红包20.00元</span>
                 <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
@@ -155,7 +155,7 @@
             </div>
         </div>
         <div class="home-shop-box">
-            <img src="__MARKET_IMG__/banner1.png" alt="">
+            <img src="../images/banner1.png" alt="">
             <div class="home-shop-text">
                 <span>红包20.00元</span>
                 <span>【现货速发】不知道这是写的啥，反正以后这个文本是要替换掉的，就是随便填充下先。</span>
@@ -205,11 +205,11 @@
         </div>
     </a>
 </footer>
-<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
-<script src="__MARKET_JS__/api.2.0.js"></script>
-<script src="__MARKET_JS__/search.js"></script>
-<!--<script src="__MARKET_JS__/tab.js"></script>-->
-<script src="__MARKET_JS__/aui-slide.js"></script>
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/api.2.0.js"></script>
+<script src="../js/search.js"></script>
+<!--<script src="../js/tab.js"></script>-->
+<script src="../js/aui-slide.js"></script>
 <script>
     $(document).ready(function () {
         //轮播图
