--- a/html/setup.html
+++ b/html/setup.html
@@ -5,11 +5,11 @@
     <title>设置</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/lessstyle.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/common1.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/lessstyle.css">
 </head>
 <body>
 <header class="aui-bar aui-bar-nav" id="aui-header">
@@ -40,10 +40,10 @@
     </div>
     <div class="out-login">退出登录</div>
 </nav>
-<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
-<script src="__MARKET_JS__/handlebars-v4.0.10.js"></script>
-<script src="__MARKET_JS__/config.js"></script>
-<script src="__MARKET_JS__/common.js"></script>
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/common.js"></script>
 <script>
     var a=$('#setup-template').html();
     var b=Handlebars.compile(a);
