--- a/html/wxmass.html
+++ b/html/wxmass.html
@@ -5,11 +5,11 @@
     <title>微信群发</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="__MARKET_CSS__/aui.2.0.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/common1.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/reset.css">
-    <link rel="stylesheet" href="__MARKET_CSS__/wxmass.css">
+    <link rel="stylesheet" href="../css/aui.2.0.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/common1.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/wxmass.css">
 </head>
 <body>
 <section>
@@ -21,7 +21,7 @@
     </header>
     <section class="wxmass-box">
         <div class="wxmass-box-img">
-            <img src="__MARKET_IMG__/banner1.png" alt="">
+            <img src="../images/banner1.png" alt="">
         </div>
         <div class="wxmass-box-list">
             <ul>
@@ -96,12 +96,12 @@
 
             </div>
             <div class="wxmass-item-img">
-                <img src="__MARKET_IMG__/banner1.png" alt="">
+                <img src="../images/banner1.png" alt="">
             </div>
             <ul class="wxmass-item-list">
                 <li>
                     <div class="wxmass-item-list-img">
-                        <img src="__MARKET_IMG__/sends1.png" alt="">
+                        <img src="../images/sends1.png" alt="">
                     </div>
                     <span>发送给朋友</span>
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
@@ -110,7 +110,7 @@
                 </li>
                 <li>
                     <div class="wxmass-item-list-img">
-                        <img src="__MARKET_IMG__/sends2.png" alt="">
+                        <img src="../images/sends2.png" alt="">
                     </div>
                     <span>分享到朋友圈</span>
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
@@ -119,7 +119,7 @@
                 </li>
                 <li class="no-border">
                     <div class="wxmass-item-list-img">
-                        <img src="__MARKET_IMG__/sends3.png" alt="">
+                        <img src="../images/sends3.png" alt="">
                     </div>
                     <span>收藏</span>
                     <div class="aui-col-xs-3 wxmass-col-xs-3">
@@ -131,7 +131,7 @@
 
     </section>
 </section>
-<script src="__MARKET_JS__/jquery-3.0.0.min.js"></script>
+<script src="../js/jquery-3.0.0.min.js"></script>
 <script>
     $('.wxmass-list-li').click(function () {
         $('.wxmass-sends').toggle()
