--- a/html/notice.html
+++ b/html/notice.html
@@ -19,19 +19,19 @@
     <div class="aui-title my-aui-title">平台公告</div>
 </header>
 
-<section class="notice-box">
-    <section class="notice-title">
-        <b>【品牌入驻】纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了</b>
-    </section>
-    <div class="notice-img">
-        <img src="../images/banner1.png" alt="">
-    </div>
-    <div class="notice-text">
-        <p>纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了纽特斯邦威入驻平台了，纽特斯邦威入驻平台了,纽特斯邦威入驻平台了</p>
-    </div>
-
+<section class="notice-box" id="notice-detail">
 
 </section>
+<script type="text/x-handlebars-template" id="notice-detail-template">
+    {{#this}}
+        {{content}}
+    {{/this}}
+</script>
+<script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/function.js"></script>
+<script src="../js/notice.js"></script>
 
 </body>
 </html>
