--- a/html/commodity.html
+++ b/html/commodity.html
@@ -25,370 +25,107 @@
     </div>
 </header>
 <section class="comm-box">
-    <div class="dis-select-box">
-        <select>
-            <option value="全部">全部(100)</option>
-            <option value="男装">女装(20)</option>
-            <option value="童装">童装(20)</option>
-            <option value="情侣装">情侣装(60)</option>
-        </select>
-        <select>
-            <option value="全部">默认排序</option>
-            <option value="价格由低到高">价格由低到高</option>
-            <option value="价格由高到低">价格由高到低</option>
-            <option value="销量由高到低">销量由高到低</option>
-        </select>
-        <div class="dis-screen-btn dis-screen-active">筛选</div>
-        <div class="dis-screen">
-            <div class="dis-screen-price">
-                <div class="dis-price-section">价格区间</div>
-                <div class="dis-screen-select">
-                    <div class="dis-low-price">最低价</div>
-                    <div class="dis-price-line"></div>
-                    <div class="dis-high-price">最高价</div>
+    <div class="dis-select-box" id="dis-select-box">
+        <script type="text/x-handlebars-template" id="select-template">
+            <select class="dis-shop-type" id="shop-type-box">
+                {{#each this}}
+                <option value="{{id}}">{{name}}({{count}})</option>
+                {{/each}}
+            </select>
+            <select class="dis-shop-sort">
+                <option value="">默认排序</option>
+                <option value="priceDesc">价格由低到高</option>
+                <option value="priceAsc">价格由高到低</option>
+                <option value="salesDesc">销量由高到低</option>
+            </select>
+            <div class="dis-screen-btn">筛选</div>
+            <div class="dis-screen">
+                <div class="dis-screen-price">
+                    <div class="dis-price-section">价格区间</div>
+                    <div class="dis-screen-select">
+                        <input type="number" class="dis-low-price" placeholder="最低价">
+                        <div class="dis-price-line"></div>
+                        <input type="number" class="dis-high-price" placeholder="最高价">
+                    </div>
+                    <div class="dis-price-section">商品销量</div>
+                    <div class="dis-screen-select">
+                        <input type="number" class="dis-low-sales" placeholder="最低销量">
+                        <div class="dis-price-line"></div>
+                        <input type="number" class="dis-high-sales" placeholder="最高销量">
+                    </div>
+                    <div class="aui-list-item-inner">
+                        <label><input class="aui-radio servenBack" type="checkbox" name="radio2"> 退货免运费</label>
+                    </div>
+                    <div id="nmbConfirm">确定</div>
                 </div>
-                <div class="dis-screen-select">
-                    <div class="dis-low-sales">最低销量</div>
-                    <div class="dis-price-line"></div>
-                    <div class="dis-high-sales">最销量</div>
+            </div>
+        </script>
+    </div>
+    <div id="dis-list-vessel" class="mar-bottom">
+
+        <!--<a href="javascript:;" class="display-box">
+            <div class="dis-list-box">
+                <div class="dis-shop-img">
+                    <img src="../images/22.jpg" alt="">
                 </div>
-                <div class="aui-list-item-inner">
-                    <label><input class="aui-radio" checked type="radio" name="radio2"> 退货免运费</label>
+                <div class="dis-list-content">
+                    <div class="dis-shop-detail">
+                        <span>红包20.00元</span>
+                        <span>退货免运费</span>
+                        <span>我爱北京天安门我爱北京天安门</span>
+                    </div>
+                    <div class="dis-price">
+                        <span>优惠价:108:00</span>
+                        <span>销量：269</span>
+                    </div>
+                    <div class="dis-evaluate">
+                        <span>赚:30.61元</span>
+                        <span>佣金率：28.9%</span>
+                    </div>
+                    <div class="dis-sale">
+                        <span>立即推广</span>
+                    </div>
+                </div>
+            </div>
+        </a>-->
+
+    </div>
+    <div class="loading">加载更多...</div>
+    <div class="no-info">没有更多信息了...</div>
+    <div class="default-height"></div>
+</section>
+<script type="text/x-handlebars-template" id="discount-list-template">
+    {{#each products}}
+    <a href="goodsdetail.html?productId={{id}}" class="display-box">
+        <div class="dis-list-box">
+            <div class="dis-shop-img">
+                <!--<img src="../img/grey.gif" data-src="{{mainImageUrl}}" alt="">-->
+                <img src="../images/lazy-img.jpg" data-src="{{mainImageUrl}}" alt="">
+            </div>
+            <div class="dis-list-content">
+                <div class="dis-shop-detail">
+                    <span>红包{{productHongbao}}元</span>
+                    <span>{{exemption isServenBack}}</span>
+                    <span>{{name}}</span>
+                </div>
+                <div class="dis-price">
+                    <span>￥{{productPrice}}</span>
+                    <span>￥{{productOrginPrice}}</span>
+                </div>
+                <div class="dis-evaluate">
+                    <span>{{totalFeedback}}评价</span>
+                    <span>好评 <span>{{percentFeedback}}</span></span>
+                </div>
+                <div class="dis-sale">
+                    <span>立即推广</span>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="dis-list-vessel" class="mar-bottom">
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a href="javascript:;" class="display-box">
-            <div class="dis-list-box">
-                <div class="dis-shop-img">
-                    <img src="../images/22.jpg" alt="">
-                </div>
-                <div class="dis-list-content">
-                    <div class="dis-shop-detail">
-                        <span>红包20.00元</span>
-                        <span>退货免运费</span>
-                        <span>我爱北京天安门我爱北京天安门</span>
-                    </div>
-                    <div class="dis-price">
-                        <span>优惠价:108:00</span>
-                        <span>销量：269</span>
-                    </div>
-                    <div class="dis-evaluate">
-                        <span>赚:30.61元</span>
-                        <span>佣金率：28.9%</span>
-                    </div>
-                    <div class="dis-sale">
-                        <span>立即推广</span>
-                    </div>
-                </div>
-            </div>
-        </a>
-    </div>
-</section>
-
+    </a>
+    {{/each}}
+</script>
 <footer class="aui-bar aui-bar-tab" id="footer">
-    <a href="extension.html">
+    <a href="index.html">
         <div class="aui-bar-tab-item" tapmode>
             <i class="aui-iconfont aui-icon-home"></i>
             <div class="aui-bar-tab-label">首页</div>
@@ -415,16 +152,11 @@
 </footer>
 
 <script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/handlebars-v4.0.10.js"></script>
+<script src="../js/config.js"></script>
+<script src="../js/aui-lazyload.js"></script>
 <script src="../js/api.2.0.js"></script>
 <script src="../js/search.js"></script>
-<script>
-    $(document).ready(function () {
-        /*筛选按钮的切换*/
-        $('.dis-screen-btn').click(function () {
-            $('.dis-screen').toggle();
-        });
-
-    });
-</script>
+<script src="../js/commodity.js"></script>
 </body>
 </html>
