--- a/html/goodsdetail.html
+++ b/html/goodsdetail.html
@@ -147,13 +147,11 @@
         </div>
     </section>
     <!--底部购物车-->
-    <footer class="goodsdetail-footer">
+   <!-- <footer class="goodsdetail-footer">
         <div class="goodsdetail-footer-gwc"><img src="../images/gwc.png" alt=""></div>
         <div class="goodsdetail-footer-join"><span>加入购物车</span></div>
         <div class="goodsdetail-footer-buy"><span>立刻购买</span></div>
-    </footer>
-
-
+    </footer>-->
 </section>
 <script src="../js/jquery-3.0.0.min.js"></script>
 <script src="../js/api.2.0.js"></script>
