微信群发适配

--- a/html/friends.html
+++ b/html/friends.html
@@ -113,10 +113,11 @@
     </div>
 </section>
 <script src="../js/jquery-3.0.0.min.js"></script>
+<script src="../js/common.js"></script>
 <script>
     $('.friends-detail-bottom').click(function () {
         $('.friends-share').toggle()
-    })
+    });
     $('.return').click(function () {
         $('.friends-share').toggle()
     })
